@@ -1,44 +1,47 @@
 package school.faang.user_service.service;
 
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import school.faang.user_service.dto.UserDto;
 import school.faang.user_service.dto.UserFilterDto;
 import school.faang.user_service.entity.User;
+import school.faang.user_service.filters.interfaces.UserFilter;
+import school.faang.user_service.mapper.UserMapper;
 import school.faang.user_service.repository.UserRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class UserService {
 
     private final UserRepository userRepository;
+    private final UserMapper userMapper;
+    private final List<UserFilter> userFilters;
 
     @Transactional(readOnly = true)
     public List<UserDto> getPremiumUsers(UserFilterDto filterDto) {
-        return userRepository.findPremiumUsers()
-                .filter(user -> applyFilter(user, filterDto))
-                .map(this::toUserDto)
-                .collect(Collectors.toList());
+        Stream<User> users = userRepository.findPremiumUsers();
+        var filterUser = filterUser(users, filterDto)
+                .map(userMapper::toDto)
+                .toList();
+
+        log.info("Found {} premium users", filterUser);
+
+        return filterUser;
     }
 
-    private boolean applyFilter(User user, UserFilterDto filterDto) {
-        return (filterDto.getUsername() == null || user.getUsername().contains(filterDto.getUsername())) &&
-                (filterDto.getEmail() == null || user.getEmail().contains(filterDto.getEmail())) &&
-                (filterDto.getCity() == null || user.getCity().equals(filterDto.getCity())) &&
-                (filterDto.getActive() == null || user.isActive() == filterDto.getActive());
+    private Stream<User> filterUser(Stream<User> users, UserFilterDto filterDto) {
+        for (UserFilter filter : userFilters) {
+            if (filter.isAcceptable(filterDto)) {
+                users = filter.accept(users, filterDto);
+            }
+        }
+        return users;
     }
 
-    private UserDto toUserDto(User user) {
-        return UserDto.builder()
-                .id(user.getId())
-                .username(user.getUsername())
-                .email(user.getEmail())
-                .city(user.getCity())
-                .active(user.isActive())
-                .build();
-    }
 }
